// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rectangles determineDimensions should be able to determine the dimensions when a negative margin is provided 1`] = `
Object {
  "bottom": 1950,
  "left": 125,
  "right": 950,
  "top": 225,
}
`;

exports[`rectangles determineDimensions should be able to determine the dimensions when a positive margin is provided 1`] = `
Object {
  "bottom": 2050,
  "left": 75,
  "right": 1050,
  "top": 175,
}
`;

exports[`rectangles determineDimensions should be able to determine the dimensions when no margin is provided 1`] = `
Object {
  "bottom": 2000,
  "left": 100,
  "right": 1000,
  "top": 200,
}
`;

exports[`rectangles determineElementBlockOuts should return an array of element blockouts if multiple elements are provided 1`] = `
Array [
  Object {
    "bottom": 20,
    "left": 1,
    "right": 10,
    "top": 2,
  },
  Object {
    "bottom": 20,
    "left": 1,
    "right": 10,
    "top": 2,
  },
  Object {
    "bottom": 20,
    "left": 1,
    "right": 10,
    "top": 2,
  },
  Object {
    "bottom": 20,
    "left": 1,
    "right": 10,
    "top": 2,
  },
  Object {
    "bottom": 20,
    "left": 1,
    "right": 10,
    "top": 2,
  },
  Object {
    "bottom": 20,
    "left": 1,
    "right": 10,
    "top": 2,
  },
  Object {
    "bottom": 20,
    "left": 1,
    "right": 10,
    "top": 2,
  },
  Object {
    "bottom": 20,
    "left": 1,
    "right": 10,
    "top": 2,
  },
  Object {
    "bottom": 20,
    "left": 1,
    "right": 10,
    "top": 2,
  },
]
`;

exports[`rectangles determineElementBlockOuts should return an array of one element blockout if 1 element is provided 1`] = `
Array [
  Object {
    "bottom": 20,
    "left": 1,
    "right": 10,
    "top": 2,
  },
]
`;

exports[`rectangles determineElementBlockOuts should return an array of one element blockout if multiple elements are provided but 1 with an element number 1`] = `
Array [
  Object {
    "bottom": 20,
    "left": 1,
    "right": 10,
    "top": 2,
  },
]
`;

exports[`rectangles determineElementBlockOuts should return an empty array if no elements are provided 1`] = `Array []`;

exports[`rectangles determineIgnoreRectangles should get the android navigation bar block outs 1`] = `
Array [
  Object {
    "bottom": undefined,
    "left": undefined,
    "right": 812,
    "top": undefined,
  },
]
`;

exports[`rectangles determineIgnoreRectangles should get the block outs 1`] = `
Array [
  Object {
    "bottom": 44,
    "left": 11,
    "right": 33,
    "top": 22,
  },
  Object {
    "bottom": 54,
    "left": 21,
    "right": 43,
    "top": 32,
  },
]
`;

exports[`rectangles determineIgnoreRectangles should get the status bar block outs 1`] = `
Array [
  Object {
    "bottom": 26,
    "left": 0,
    "right": 812,
    "top": 0,
  },
]
`;

exports[`rectangles determineIgnoreRectangles should return iPhone X Max bottom bar rectangles 1`] = `
Array [
  Object {
    "bottom": 15,
    "left": 399,
    "right": 444,
    "top": 2649,
  },
]
`;

exports[`rectangles determineIgnoreRectangles should return iPhone X regular bottom bar rectangles 1`] = `
Array [
  Object {
    "bottom": 15,
    "left": 362,
    "right": 402,
    "top": 2397,
  },
]
`;

exports[`rectangles determineIgnoreRectangles should return nothing if no ignore rectangles need to be returned 1`] = `Array []`;

exports[`rectangles determineNavigationBarRectangles should determine the navigationbar rectangles 1`] = `
Object {
  "bottom": 20,
  "left": 1,
  "right": 500,
  "top": 2,
}
`;

exports[`rectangles determineNavigationBarRectangles should determine the navigationbar rectangles by using the already defined one 1`] = `
Object {
  "bottom": 20,
  "left": 1,
  "right": 500,
  "top": 2,
}
`;

exports[`rectangles determineNavigationBarRectangles should determine the navigationbar rectangles by using the already defined one 2`] = `
Object {
  "bottom": 20,
  "left": 1,
  "right": 500,
  "top": 2,
}
`;

exports[`rectangles determineStatusBarRectangles should determine the iOS statusbar rectangles 1`] = `
Object {
  "bottom": 80,
  "left": 0,
  "right": 1200,
  "top": 0,
}
`;

exports[`rectangles determineStatusBarRectangles should determine the initial statusbar rectangles 1`] = `
Object {
  "bottom": 26,
  "left": 0,
  "right": 300,
  "top": 0,
}
`;

exports[`rectangles determineStatusBarRectangles should determine the statusbar rectangles by using the already defined one 1`] = `
Object {
  "bottom": 26,
  "left": 0,
  "right": 30,
  "top": 0,
}
`;

exports[`rectangles determineStatusBarRectangles should determine the statusbar rectangles by using the already defined one 2`] = `
Object {
  "bottom": 26,
  "left": 0,
  "right": 30,
  "top": 0,
}
`;

exports[`rectangles determineValidBlockOuts should return the valid blockouts if an array with invalid keys is provided 1`] = `
Array [
  Object {
    "bottom": 8,
    "left": 5,
    "right": 7,
    "top": 6,
  },
  Object {
    "bottom": 14,
    "left": 9,
    "right": 13,
    "top": 12,
  },
]
`;

exports[`rectangles determineValidBlockOuts should return the valid blockouts if an valid array if provided 1`] = `
Array [
  Object {
    "bottom": 4,
    "left": 1,
    "right": 3,
    "top": 2,
  },
  Object {
    "bottom": 4,
    "left": 1,
    "right": 3,
    "top": 2,
  },
]
`;

exports[`rectangles getElementRectangles should return element rectangles 1`] = `
Object {
  "height": 20,
  "width": 10,
  "x": 1,
  "y": 2,
}
`;
